<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.homeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

 <androidx.cardview.widget.CardView
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
    <com.denzcoskun.imageslider.ImageSlider
    android:layout_width="match_parent"
    android:layout_height="250dp"
   app:iss_period="1000"
        app:iss_auto_cycle="true"
        app:iss_corner_radius="5"
        app:iss_title_background="@drawable/gradient"
    android:id="@+id/imageslider"
    />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="The GLA UNIVERSITY"
             android:layout_marginTop="36dp"
             android:textSize="@dimen/text_size"
             android:layout_gravity="center_horizontal"
             android:textColor="@color/textColor"
             android:fontFamily="@string/bold"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/about_college"
             android:textSize="@dimen/text_size"
             android:layout_marginTop="@dimen/text_margin"
             android:layout_marginHorizontal="@dimen/text_size"
             android:layout_gravity="center_horizontal"
             android:textColor="@color/textColor"
             android:fontFamily="@string/light"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="36dp"
             android:background="@color/darkColor">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="36dp"
             android:orientation="vertical">

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Dapartments"
                 android:layout_marginTop="16dp"
                 android:textSize="@dimen/text_size"
                 android:layout_gravity="center_horizontal"
                 android:textColor="#ffff"
                 android:fontFamily="@string/bold"/>

             <com.google.android.material.card.MaterialCardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
                 >

                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="#ffffff"
                     android:orientation="vertical">
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Computer Science"
                         android:textSize="@dimen/text_size"
                         android:layout_margin="8dp"
                         android:layout_marginTop="@dimen/text_margin"
                         android:layout_marginHorizontal="@dimen/text_size"
                         android:layout_gravity="center_horizontal"
                         android:textColor="@color/textColor"
                         android:fontFamily="@string/light"/>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:background="@color/grey"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Civil Engineering"
                         android:textSize="@dimen/text_size"
                         android:layout_margin="8dp"
                         android:layout_marginTop="@dimen/text_margin"
                         android:layout_marginHorizontal="@dimen/text_size"
                         android:layout_gravity="center_horizontal"
                         android:textColor="@color/textColor"
                         android:fontFamily="@string/light"/>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:background="@color/grey"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Machnical Engineering "
                         android:textSize="@dimen/text_size"
                         android:layout_margin="8dp"
                         android:layout_marginTop="@dimen/text_margin"
                         android:layout_marginHorizontal="@dimen/text_size"
                         android:layout_gravity="center_horizontal"
                         android:textColor="@color/textColor"
                         android:fontFamily="@string/light"/>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:background="@color/grey"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Electrical Engineering"
                         android:textSize="@dimen/text_size"
                         android:layout_margin="8dp"
                         android:layout_marginTop="@dimen/text_margin"
                         android:layout_marginHorizontal="@dimen/text_size"
                         android:layout_gravity="center_horizontal"
                         android:textColor="@color/textColor"
                         android:fontFamily="@string/light"/>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:background="@color/grey"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/electrical_electronics_eng"
                         android:textSize="@dimen/text_size"
                         android:layout_margin="8dp"
                         android:layout_marginTop="@dimen/text_margin"
                         android:layout_marginHorizontal="@dimen/text_size"
                         android:layout_gravity="center_horizontal"
                         android:textColor="@color/textColor"
                         android:fontFamily="@string/light"/>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:background="@color/grey"/>


                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
         </LinearLayout>

         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="@dimen/text_margin">

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Contact Details"
                 android:layout_marginTop="36dp"
                 android:textSize="@dimen/text_size"
                 android:layout_gravity="center_horizontal"
                 android:textColor="@color/textColor"
                 android:fontFamily="@string/bold"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/app_name"
                 android:layout_marginTop="36dp"
                 android:textSize="@dimen/text_size"
                 android:layout_gravity="center_horizontal"
                 android:textColor="@color/textColor"
                 android:fontFamily="@string/light"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/address"
                 android:layout_marginTop="12dp"
                 android:textSize="@dimen/text_size"
                 android:layout_gravity="center_horizontal"
                 android:textColor="@color/textColor"
                 android:fontFamily="@string/light"/>
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="230dp"
                 android:layout_marginTop="25dp"
                 android:id="@+id/mapgla"
                 android:src="@drawable/gla"/>


         </LinearLayout>
     </LinearLayout>

 </androidx.cardview.widget.CardView>
    </ScrollView>
</FrameLayout>